# mir-simulation

./: Dockerfile  README.md  docker-compose.yml  entrypoint.bash  run.bash
custom_mir_robot/: README.md
custom_mir_robot/custom_mir_robot/: CMakeLists.txt  package.xml
custom_mir_robot/custom_mir_robot/launch/: maze_world.launch
